fixed jumbotron overlap on other components

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -113,7 +113,7 @@
     font-family:"Gotham-Book";
 }
 #social-icons{
-    padding-top:16px;;
+    padding-top:16px;
 }
 #social-icons >li{
     display:inline;
@@ -172,7 +172,7 @@
     padding-top: 5vh;
 }
 
-.jumbo > .jumbo-buffer {
+.jumbo-buffer {
     height: 10vh;  /* TODO : solution without buffer */
 }
 .jumbo-home {
@@ -281,7 +281,7 @@
     height: 100%;
 }
 #error-text{
-    font-size: 1000%;
+    font-size: 1250%;
     color:var(--lightblue);
 }
 #error-subtext{
